# math_library

./: .gitignore  CMakeLists.txt  main.cpp  run.sh
include/: linalg.hpp  matrix.hpp  operations.hpp  vector.hpp  vector_impl.hpp  vector_operations.hpp
include/matrix/: matrix.hpp  operations.hpp  view.hpp
include/vector/: operations.hpp  vector.hpp
lin_alg/: core.hpp  lin_alg.hpp  main.cpp  makefile  matrices.hpp  matrix.hpp  operations.hpp  utility.hpp  view.hpp
linear_algebra/: CMakeLists.txt
linear_algebra/include/: generators.hpp  operations.hpp  vector.hpp  vector_operations.hpp
linear_algebra/matrix/: main.cpp  operations.hpp
linear_algebra/src/: main.cpp  vector.cpp
src/: main.cpp  matrix.cpp  operations.cpp  vector.cpp
src/matrix/: matrix.cpp  operations.cpp
src/vector/: operations.cpp  vector.cpp
